2005-07-24  Paolo Borelli  <pborelli@katamail.com>

	* sample/sample.c: check the right pointer. Patch from Ike Gingerich.

==== gedit 2.10.2 ====

2005-04-03  Paolo Borelli  <pborelli@katamail.com>

	* spell/gedit-spell-checker.c:
	* taglist/gedit-taglist-plugin-parser.c: fix gcc 2.95 compilation,
	patch by Jens Granseuer.

==== gedit 2.10.1 ====

==== gedit 2.10.0 ====

==== gedit 2.9.7 ====

2005-02-13  Paolo Maggi  <paolo@gnome.org>

	* taglist/HTML.tags.xml.in: fixed bug #167106 (Cryptic "Script execution defer" 
	message in gedit), replaces cryptic message with "Defer attribute", added a 
	comment for translators.

2005-02-11  Paolo Borelli  <pborelli@katamail.com>

	* time/time.c: fix crash when the format in gconf is not valid.
	* taglist/HTML.tags.xml.in: fix strings.

==== gedit 2.9.6 ====

2005-02-07  Paolo Borelli  <pborelli@katamail.com>

	* savecopy/savecopy.c: append "copy" to the filename if we are in
	the same dir of the original.

2005-02-04  Paolo Maggi  <paolo@gnome.org>

	Synchronized with gtkspell 2.0.8

	* spell/gedit-automatic-spell-checker.c (check_range)
	(check_deferred_range) (insert_text_before) (insert_text_after)
	(delete_range_after) (mark_set)
	(gedit_automatic_spell_checker_recheck_all) (button_press_event)
	(popup_menu_event) (gedit_automatic_spell_checker_new):
	Added deferred spell checking: make the misspelled word highlighting work 
	like other apps and delay checking the current word until the cursor exits it.
	Patch by Nathan Fredrickson <nathan@silverorange.com> backported 
	from gtkspell 2.0.8

	(gedit_automatic_spell_checker_free):
	(gedit_automatic_spell_checker_free_internal):
	(gedit_automatic_spell_checker_detach_view): fixed a crash that happens
	if you remove automatic spell checker and the press Shift+F10

2005-02-04  Paolo Maggi  <paolo@gnome.org>

	* spell/gedit-spell-checker.c: update the list of known languages with
	the list available at http://aspell.sourceforge.net/man-html/Supported.html.